--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@radix-ui/react-collapsible": "^1.0.3",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "lucide-react": "^0.264.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
-    "react-redux": "^8.1.2"
+    "react-redux": "^8.1.2",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
